--- a/src/components/d3Component.scss
+++ b/src/components/d3Component.scss
@@ -25,8 +25,8 @@ text{
     fill: white  
 }
 .line-path{
-    fill:none;
-    stroke: red;
+    fill: blue;
+    stroke: orange;
     stroke-width: 5;
     stroke-linejoin: round;
 }
