--- a/src/components/d3Component.scss
+++ b/src/components/d3Component.scss
@@ -26,7 +26,7 @@ text{
 }
 .line-path{
     fill: blue;
-    stroke: orange;
+    stroke: none;
     stroke-width: 5;
     stroke-linejoin: round;
 }
